<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lifetotal"
        android:id="@+id/lifeCountView"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_below="@+id/playerNameView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus"
        android:id="@+id/plusButton"
        android:layout_below="@+id/lifeCountView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minus"
        android:id="@+id/minusButton"
        android:layout_above="@+id/minusFiveButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plusfive"
        android:id="@+id/plusFiveButton"
        android:layout_below="@+id/plusButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/plusButton"
        android:layout_alignEnd="@+id/plusButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minusfive"
        android:id="@+id/minusFiveButton"
        android:layout_alignTop="@+id/plusFiveButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playername"
        android:id="@+id/playerNameView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="24sp"
        android:editable="false"
        android:inputType="textPersonName"
        android:imeOptions="actionDone"/>
</RelativeLayout>